--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
@@ -48,7 +48,7 @@
                     <p:outputLabel value="data sporządzenia rach:"/>
                     <p:inputText value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.datawystawienia}" size="10" placeholder="____-__-__">
                             <p:ajax event="change" onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" partialSubmit="true" global="false" 
-                                    listener="#{rachunekZlecenieView.ustawTabiPrzelicz(rachunekZlecenieView.rachunekdoumowyzlecenia)}" update="RachunekZleceniaForm:walutyrachunekpanel RachunekZleceniaForm:panelkwoty"/>
+                                    listener="#{rachunekZlecenieView.ustawTabiPrzelicz(rachunekZlecenieView.rachunekdoumowyzlecenia)}" update="RachunekZleceniaForm:walutyrachunekpanel RachunekZleceniaForm:panelkwoty @(.czekpole)"/>
                     </p:inputText>
                     <p:outputLabel value="data od:"/>
                     <h:outputText value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.dataod}"/>
@@ -94,6 +94,10 @@
                     <bcf:outputplprocent value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.procentkosztowuzyskaniaDisplay}"/>
                 </p:panelGrid>
                 <p:panelGrid columns="2" style="margin-top: 10px;">
+                    <p:outputLabel value="osoba do 26 roku życia:"/>
+                    <p:selectBooleanCheckbox value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.do26lat}" styleClass="czekpole">
+                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.edytujkwadraciki}"/>
+                    </p:selectBooleanCheckbox>
                     <p:outputLabel value="status studenta:"/>
                     <p:selectBooleanCheckbox value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.statusstudenta}" styleClass="czekpole">
                         <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.edytujkwadraciki}"/>
