--- a/npkpir_23/web/ksiegowaFK/ksiegowaFKRejestry.xhtml
+++ b/npkpir_23/web/ksiegowaFK/ksiegowaFKRejestry.xhtml
@@ -38,6 +38,7 @@
 <!--                    <ui:include src="sub/dialog/dialog_ewidencjevat_sprawdzanie.xhtml"/>chodzilo o edycje dok to juz jest w samych ewidencjach-->
                     <ui:include src="sub/dialog/dialog_ewvat_dedra.xhtml"/>
                     <ui:include src="sub/dialog/dialog_jpk_vat.xhtml"/>
+                    <ui:include src="sub/dialog/dialog_jpk_vat_pozycje.xhtml"/>
                     <ui:include src="sub/dialog/dialog_vatzd.xhtml"/>
                     <ui:include src="sub/dialog/dialog_deklaracje_vat.xhtml"/>
                     <ui:include src="sub/dialog/dialog_deklaracje_vat_wysylka.xhtml"/>
