--- a/kadry/src/main/webapp/umowa/sub/dane1_rozwiazania.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_rozwiazania.xhtml
@@ -61,6 +61,7 @@
                                 <h:outputText value="wypowiedzenie"   rendered="#{itemroz.wypowiedzenie}"/>
                                 <h:outputText value="rozwiązanie"   rendered="#{itemroz.rozwiazanie}"/>
                                 <h:outputText value="porozumienie"   rendered="#{itemroz.porozumienie}"/>
+                                <h:outputText value="upływ czasu"   rendered="#{itemroz.uplywczasuzawarcia}"/>
                             </p:column>
                             <p:column width="70">
                                 <f:facet name="header">
