--- a/kadry/src/main/webapp/umowa/sub/dane1_edycja_rozwiazania.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_edycja_rozwiazania.xhtml
@@ -55,7 +55,7 @@
                                         <h:outputText value="a) wypowiedzenie"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.wypowiedzenie}" label="wypowiedzenie"/>
                                         <h:outputText value="b) rozwiązanie"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.rozwiazanie}" label="rozwiązanie"/>
                                         <h:outputText value="c) porozumienie stron"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.porozumienie}" label="porozumienie"/>
-                                        <h:outputText value="c) uplyw czasu zawarcia"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.porozumienie}" label="czaszawarcia"/>
+                                        <h:outputText value="c) uplyw czasu zawarcia"/><p:selectBooleanCheckbox value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.uplywczasuzawarcia}" label="czaszawarcia"/>
                                     </p:panelGrid>
                                 </p:column>
                                 <h:outputText value="inicjator wypowiedzenia"/>
