--- a/kadry/src/main/webapp/umowa/sub/dane1_ekwiwalent_urlop.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_ekwiwalent_urlop.xhtml
@@ -26,9 +26,13 @@
                             <h:outputText id="urloplpop" value="#{pracownikEkwiwalentView.ekwiwalent.zalegly}" />
                             <p:outputLabel value="wymiar na dzień naliczenia godz." for="urloplp1e" />
                             <h:outputText id="urloplp1e" value="#{pracownikEkwiwalentView.ekwiwalent.biezacy}" />
-                            <p:outputLabel value="suma rok bież+poprzedni godziny" for="urloplpop1" />
+                            <p:outputLabel value="wykorzystane godziny urlopu rok bież." for="urloplp1eaa" />
+                            <h:outputText id="urloplp1eaa" value="#{pracownikEkwiwalentView.urlopprezentacja.wykorzystanierokbiezacy}" />
+                            <p:outputLabel value="wykorzystane dni urlopu rok bież." for="urloplp1ea" />
+                            <h:outputText id="urloplp1ea" value="#{pracownikEkwiwalentView.urlopprezentacja.wykorzystanierokbiezacydni}" />
+                            <p:outputLabel value="suma do wypł. rok bież+poprzedni godziny" for="urloplpop1" />
                             <h:outputText id="urloplpop1" value="#{pracownikEkwiwalentView.ekwiwalent.godziny}" />
-                            <p:outputLabel value="suma rok bież+poprzedni dni" for="urloplpop3" />
+                            <p:outputLabel value="suma do wypł. rok bież+poprzedni dni" for="urloplpop3" />
                             <h:outputText id="urloplpop3" value="#{pracownikEkwiwalentView.ekwiwalent.dni}" />
                             <h:outputText value="etat "/>
                             <h:outputText value="#{pracownikEkwiwalentView.ekwiwalent.getEtat()}"/>
