tabelka zestawienei urlopow

--- a/kadry/src/main/webapp/wskazniki/index.xhtml
+++ b/kadry/src/main/webapp/wskazniki/index.xhtml
@@ -37,7 +37,7 @@
                                     <p:menuitem icon="pi pi-file-excel" value="PIT4" style="width: 150px" action="Pit4"/>
                                     <p:submenu icon="pi pi-print" label="wydruki" style="width: 150px">
                                         <p:menuitem icon="pi pi-ellipsis-v" value="zaświadczenia" style="width: 150px" action="wydruki"/>
-                                        <p:menuitem icon="pi pi-ellipsis-v" value="pfron/soka" style="width: 150px" action="wskazniki"/>
+                                        <p:menuitem icon="pi pi-ellipsis-v" value="pfron/soka/urlopy" style="width: 150px" action="wskazniki"/>
                                     </p:submenu>
                                     <p:menuitem icon="pi pi-chart-bar" value="statystyka" style="width: 150px" action="Statystyka"/><p:menuitem icon="pi pi-chart-bar" value="info" style="width: 150px" action="Info"/>
                                 </p:menubar>
