--- a/kadry/src/main/webapp/wskazniki/sub/wskazniki.xhtml
+++ b/kadry/src/main/webapp/wskazniki/sub/wskazniki.xhtml
@@ -13,6 +13,9 @@
                 <p:tab title="SOKA">
                     <ui:include src="soka.xhtml"/>
                 </p:tab>
+                <p:tab title="Urlopy">
+                    <ui:include src="urlopy.xhtml"/>
+                </p:tab>
             </p:tabView>
         </p:outputPanel>
 </ui:composition>
