tabelka zestawienei urlopow

--- a/kadry/src/main/webapp/wskazniki/sub/pfron.xhtml
+++ b/kadry/src/main/webapp/wskazniki/sub/pfron.xhtml
@@ -11,7 +11,7 @@
         
         <p:panel style="margin-top: 20px; height: 800px; overflow-y: scroll;" header="PFRON stan zatrudnienia" > 
 
-            <p:commandButton value="Drukuj" type="button" icon="pi pi-print" styleClass="shadow-1 mb-3">
+            <p:commandButton value="Drukuj" type="button" icon="pi pi-print" styleClass="buttonnorm">
                 <p:printer target="datalistss"/>
             </p:commandButton>
             <p:panelGrid columns="4">
