--- a/kadry/src/main/webapp/wskazniki/sub/soka.xhtml
+++ b/kadry/src/main/webapp/wskazniki/sub/soka.xhtml
@@ -11,7 +11,7 @@
         
         <p:panel  header="SOKA-BAU informacje miesięczne"/> 
         <p:outputPanel style="height: 800px;overflow-y: scroll;" id="pnlPrint1" > 
-            <p:commandButton value="Drukuj" type="button" icon="pi pi-print" styleClass="shadow-1 mb-3">
+            <p:commandButton value="Drukuj" type="button" icon="pi pi-print" styleClass="buttonnorm">
                 <p:printer target="datalist" />
             </p:commandButton>
             <p:panelGrid columns="4">
