--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
@@ -232,6 +232,13 @@
                             </f:facet>
                             <h:inputText size="4"  value="#{itemkalendarz.wychowawczy}" style="#{itemkalendarz.wychowawczy eq 0 ? 'color: #cccccc':''}"/>
                         </p:column>
+                        <p:column style="text-align: center;" >
+                            <f:facet name="header">
+                                <h:outputText value="norma oddel."/>
+                            </f:facet>
+                            <h:outputText value="#{itemkalendarz.normagodzinoddelegowanie}" rendered="#{itemkalendarz.normagodzinoddelegowanie gt 0}"/>
+                            
+                        </p:column>
                     <p:column style="text-align: center;" width="70">
                             <f:facet name="header">
                                 <h:outputText value=""/>
