drobne naprawy biurowe

--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_jpk_vat_pozycje.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_jpk_vat_pozycje.xhtml
@@ -10,7 +10,7 @@
     <p:dialog id="dialog_jpk_vat_pozycje" header="Ewidencja wystawianych plików JPK VAT firmy #{WpisView.podatnikObiekt.printnazwa}" widgetVar="dialog_jpk_vat_pozycje" resizable="false" 
               onShow="ustawdialog('dialog_jpk_vat_pozycje','dialog_jpk_vat',1520,700);"  modal="false" appendTo="@(body)"
               closeOnEscape="true">
-        <p:ajax event="open" listener="#{jpk_VAT2NView.init()}" update="form_dialog_jpk_vat_pozycje"/>
-        <ui:include src="../../../wspolny/wspolnyjpkVAT_pozycje.xhtml"/>
+<!--        <p:ajax event="open" listener="#{jpk_VAT2NView.init()}" update="form_dialog_jpk_vat_pozycje"/>-->
+<!--        <ui:include src="../../../wspolny/wspolnyjpkVAT_pozycje.xhtml"/>-->
     </p:dialog>
 </ui:composition> 
