--- a/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_niemiecka.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_niemiecka.xhtml
@@ -47,7 +47,7 @@
                                 <f:selectItem itemLabel="Pers." itemValue="Pers."/>
                                 <f:selectItem itemLabel="M2" itemValue="M2"/>
                                 <f:selectItem itemLabel="Mg" itemValue="Mg"/>
-                                <f:selectItem itemLabel="m3" itemValue="m3"/>
+                                <f:selectItem itemLabel="m3" itemValue="m3"/><f:selectItem itemLabel="m2" itemValue="m2"/>
                             </h:selectOneMenu>
                         </p:column>
                         <p:column headerText="ilość" width="60" style="text-align: center;" rendered="#{!fakturaView.fakturaxxl}">
@@ -112,7 +112,7 @@
                                 <f:selectItem itemLabel="osb." itemValue="osb."/>
                                 <f:selectItem itemLabel="tona" itemValue="tona"/>
                                 <f:selectItem itemLabel="Mg" itemValue="Mg"/>
-                                <f:selectItem itemLabel="m3" itemValue="m3"/>
+                                <f:selectItem itemLabel="m3" itemValue="m3"/><f:selectItem itemLabel="m2" itemValue="m2"/>
                             </h:selectOneMenu>
                         </p:column>
                         <p:column headerText="ilość" width="60" style="text-align: center;" rendered="#{!fakturaView.fakturaxxl}">
