--- a/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_normalna.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_normalna.xhtml
@@ -68,7 +68,7 @@
                         <f:selectItem itemLabel="osb." itemValue="osb."/>
                         <f:selectItem itemLabel="tona" itemValue="tona"/>
                         <f:selectItem itemLabel="Mg" itemValue="Mg"/>
-                        <f:selectItem itemLabel="m3" itemValue="m3"/>
+                        <f:selectItem itemLabel="m3" itemValue="m3"/><f:selectItem itemLabel="m2" itemValue="m2"/>
                     </h:selectOneMenu>
                 </p:column>
                 <p:column headerText="ilość" width="60" style="text-align: center;">
@@ -145,7 +145,7 @@
                         <f:selectItem itemLabel="m-c" itemValue="m-c"/>
                         <f:selectItem itemLabel="osb." itemValue="osb."/>
                         <f:selectItem itemLabel="Mg" itemValue="Mg"/>
-                        <f:selectItem itemLabel="m3" itemValue="m3"/>
+                        <f:selectItem itemLabel="m3" itemValue="m3"/><f:selectItem itemLabel="m2" itemValue="m2"/>
                     </h:selectOneMenu>
                 </p:column>
                 <p:column headerText="ilość" width="60" style="text-align: center;">
