elementy do statystyk

--- a/kadry/src/main/webapp/umowa/sub/dane1_rozwiazania.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_rozwiazania.xhtml
@@ -32,7 +32,7 @@
                                 <f:facet name="header">
                                     <h:outputText value="data"/>
                                 </f:facet>
-                                <h:outputText value="#{itemroz.data}">
+                                <h:outputText value="#{itemroz.datadodania}">
                                     <f:convertDateTime dateStyle="medium" locale="pl"/>
                                 </h:outputText>
                             </p:column>
