--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -1036,7 +1036,7 @@
              <p:tab title="Zmiana hasła">
                 <h:form id="Haslo">
                     <p:outputPanel style="padding: 10px;">
-                        <h:outputText value="Wprowadź nowe hasło. Hasło powinno mnieć przynajmniej 8 znaków" style="color: green;"/>
+                        <h:outputText value="Wprowadź nowe hasło. Hasło powinno mieć przynajmniej 8 znaków" style="color: green;"/>
                     </p:outputPanel>
                     <p:panelGrid columns="2">
                         <p:outputLabel value="nowe hasło:"/>
