--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza_zbiorcze.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza_zbiorcze.xhtml
@@ -64,12 +64,12 @@
                     </f:facet>
                     <h:outputText value="#{item.kontrahent}"  style="color: #{item.color2};"/>
                 </p:column>
-                <p:column width="140" sortable="true" sortBy="#{item.nrtelefonu}">
+<!--                <p:column width="140" sortable="true" sortBy="#{item.nrtelefonu}">
                     <f:facet name="header">
                         <h:outputText value="nr telefonu"/>
                     </f:facet>
                     <h:outputText value="#{item.nrtelefonu}"  style="color: #{item.color2};"/>
-                </p:column>
+                </p:column>-->
                 <p:column width="70" sortBy="#{item.data}" sortable="true">
                     <f:facet name="header">
                         <h:outputText value="data"/>
